# concrete-fhe-toolkit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: README.md  api-reference.md  bounds-and-costs.md  testing-and-release.md
examples/: quickstart.py
src/concrete_fhe_toolkit/: __init__.py  _utils.py  arithmetic.py  arrays.py
src/concrete_fhe_toolkit/math/: __init__.py  _lookup.py  _operation.py  basic.py  binary_division.py  bits.py  combinatorics.py  fixed_point.py  number_theory.py  special.py
tests/: test_arithmetic_clear.py  test_arrays_clear.py  test_compilation.py  test_fhe_smoke.py  test_math_bits.py  test_math_clear.py  test_math_compilation.py  test_math_fhe_smoke.py  test_notebook_regressions.py
