[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-fhe-toolkit"
version = "0.1.1"
description = "Bounded integer helpers for compiling common Concrete FHE circuits"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
  { name = "Erkan Işık Bacak" },
]
keywords = [
  "concrete",
  "fhe",
  "homomorphic-encryption",
  "privacy",
  "cryptography",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "concrete-python>=2.11,<3",
  "numpy>=1.23,<2",
]

[project.urls]
Company = "https://www.agrafintech.com"

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]
dev = [
  "build>=1.2",
  "pytest>=8,<10",
  "twine>=5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
concrete_fhe_toolkit = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "fhe: performs real encrypted execution and may take several minutes",
]
